--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
-body{
+:root{
+    --mainColor: rgb(134, 202, 202);
+    --fontColorGrey: ;
+    --fontRegular: ;
+    --fontBold: ;
+}
+body,p,h1{
     padding: 0;
     margin: 0;
 }
-
+/* GRID FOR WEBSITE */
 .grid{
     height: 100vh;
 
@@ -11,21 +17,108 @@ body{
     grid-template-rows: 15rem 4fr;
     min-width: 950px;
 }
-
+/* /// */
+/* HEADER */
 .header{
-    background-color: rgb(194, 255, 194); 
     grid-area: 1 / 2 / 2 / 3;
 
     display: grid;
-    grid-template: 50% 50% / 3rem 3rem 2fr 12rem 1fr; 
+    grid-template: 50% 50% / 6rem 2fr 12rem 1fr; 
 
-    padding: 25px;
+    padding: 1rem 3rem;
 }
+/* --SEARCH-- */
+.search_container{
+    grid-area: 1 / 1 / 2 / 3;
+    display: flex;
+    align-items: center;
+    margin-bottom: auto;
+    padding-top: 1rem;
+}
+.icon{
+    width: 29px;
+    height: 29px;
+}
+.search_container input,
+                  input:focus{
+    outline: none;
+    padding: 0 1rem;
+    width: 100%;
+    height: 2rem;
+    border-radius: 1rem;
+    border: 0;
+    margin-left: 1rem;
+    background-color: rgb(230, 241, 245);
+}
+/* --PROFILE-- */
+
+.profile_container{
+    grid-area: 1 / 4 / 2 / 5;
+    display: flex;
+    align-items: center;
+    margin-bottom: auto;
+    gap: 2rem;
+}
+.profile_container p{ /* NEED FONT */
+    font-size: 1.5em;
+}
+
+.profile_pic_small{
+    background-color: aqua;
+    width: 3.5rem;
+    height: 3.5rem;
+    border-radius: 1.75rem;
+}
+
+.profile_pic_big{
+    grid-area: 2 / 1 / 3 / 2;
+    width: 6rem;
+    height: 6rem;
+    border-radius: 3rem;
+}
+/* --WELCOME-- */
+.welcome_message{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    grid-area: 2 / 2 / 3 / 3;;
+    margin-left: 1.5rem;
+}
+/* --HEADER BUTTONS-- */
+.profile_buttons{
+    grid-area: 2 / 3 / 3 / 5;
+    display: flex;
+    gap: 2rem;
+    margin-left: 4rem;
+    align-items: center;
+}
+.profile_buttons button{
+    width: 7rem;
+    height: 3rem;
+    border-radius: 3.5rem;
+    color: white;
+    border: 0;
+    background-color: var(--mainColor);
+}
+/* /// */
+/* SIDEBAR */
 
 .sidebar{
-    background-color: rgb(194, 227, 255);
+    display: grid;
+    grid-template: 5rem 20rem 15rem/ 100%;
+    gap: 3rem;
+    background-color: var(--mainColor);
     grid-area: 1 / 1 / 3 / 2;
 }
+/* /// */
+
+
+
+
+
+
+
+
 
 .main{
     background-color: rgb(255, 194, 194);
