--- a/style.css
+++ b/style.css
@@ -105,10 +105,38 @@ body,p,h1{
 
 .sidebar{
     display: grid;
-    grid-template: 5rem 20rem 15rem/ 100%;
+    grid-template: 5rem 20rem 10rem / 100%;
+    padding: 1rem;
     gap: 3rem;
     background-color: var(--mainColor);
     grid-area: 1 / 1 / 3 / 2;
+    color: white;
+}
+
+.dashboard{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+.dashboard img{
+    width: 64px;
+    height: 64px;
+}
+.nav_top{
+    display: grid;
+    grid-template: repeat(6, 1fr) / 100%;
+    width: 100%;
+}
+.nav_bottom{
+    display: grid;
+    grid-template: repeat(3, 1fr) / 100%;
+    width: 100%;
+}
+.nav_option{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    margin-left: 1rem;
 }
 /* /// */
 
