--- a/style.css
+++ b/style.css
@@ -155,14 +155,32 @@ body,p,h1{
     gap: 1.5rem;
 }
 .card{
+    border-radius: 0.5rem;
+    border-left: 0.5rem solid green;
+    display: grid;
+    gap: 0.5rem;
+    padding: 1.5rem 1.5rem;
+    grid-template-rows: 1fr 2fr 1fr;
+    grid-template-columns: 100%;
     height: 200px;
     background-color: white;
+}
+.card img{
+    width: 24px;
+    height: 24px;
+}
+.card_icons{
+    display: flex;
+    align-items: end;
+    justify-content: flex-end;
+    gap: 1rem;
 }
 .annoucements{
     display: flex;
     flex-direction: column;
 }
 .annoucements_card{
+    min-width: 180px;
     display: flex;
     flex-direction: column;
     background-color: white;
