--- a/style.css
+++ b/style.css
@@ -21,6 +21,17 @@ body,p,h1,h2,h3,h4{
     padding: 0;
     margin: 0;
 }
+/* ==FONT CLASSES== */
+.bold{
+    font-family: var(--fontBold);
+}
+.regular{
+    font-family: var(--fontRegular);
+}
+.light{
+    font-family: var(--fontLight);
+}
+
 /* GRID FOR WEBSITE */
 .grid{
     height: 100vh;
@@ -114,7 +125,7 @@ body,p,h1,h2,h3,h4{
 .profile_buttons button{
     font-family: var(--fontBold);
     font-size: 1.1em;
-    width: 7rem;
+    width: 7.5rem;
     height: 3rem;
     border-radius: 3.5rem;
     color: white;
@@ -167,7 +178,7 @@ body,p,h1,h2,h3,h4{
     background-color: rgb(230, 241, 245);
     grid-area: 2 / 2 / 3 / 3;
     display: grid;
-    padding: 2rem;
+    padding: 1rem 2rem;
     grid-template: 20rem auto / 3fr 1fr;
     gap: 2rem;
 }
@@ -175,6 +186,7 @@ body,p,h1,h2,h3,h4{
     grid-area: 1 / 1 / 3 / 2;
 }
 .cards{
+    margin-top: 0.5rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 1.5rem;
@@ -211,11 +223,13 @@ body,p,h1,h2,h3,h4{
     flex-direction: column;
 }
 .annoucements_card{
-    min-width: 180px;
+    margin-top: 0.5rem;
+    border-radius: 1rem;
+    min-width: 300px;
     display: flex;
     flex-direction: column;
     background-color: white;
-    padding: 2rem;
+    padding: 1.5rem;
     height: 100%
 }
 .annouc_content{
@@ -243,6 +257,8 @@ body,p,h1,h2,h3,h4{
     flex-direction: column;
 }
 .trending_card{
+    margin-top: 0.5rem;
+    border-radius: 1rem;
     display: grid;
     gap: 0.8rem;
     grid-template-columns: 100%;
@@ -259,10 +275,4 @@ body,p,h1,h2,h3,h4{
     justify-content: center;
     display: flex;
     flex-direction: column;
-}
-.trend_text h4{
-    font-family: var(--fontBold);
-}
-.trend_text p{
-    font-family: var(--fontRegular);
 }
