--- a/style.css
+++ b/style.css
@@ -20,7 +20,9 @@
 body,p,h1,h2,h3,h4{
     padding: 0;
     margin: 0;
+    cursor: default;
 }
+
 /* ==FONT CLASSES== */
 .bold{
     font-family: var(--fontBold);
@@ -32,19 +34,29 @@ body,p,h1,h2,h3,h4{
     font-family: var(--fontLight);
 }
 
+/* ==ICON CLASSES== */
+.icon{
+    cursor: pointer;
+    width: 29px;
+    height: 29px;
+}
+.icon_invert{
+    filter: invert(1);
+}
 /* GRID FOR WEBSITE */
 .grid{
     height: 100vh;
+    min-width: 950px;
 
     display: grid;
     grid-template-columns: 22.5rem 4fr;
     grid-template-rows: 15rem 4fr;
-    min-width: 950px;
 }
 /* /// */
 /* HEADER */
 .header{
     grid-area: 1 / 2 / 2 / 3;
+
     display: grid;
     grid-template: 50% 50% / 6rem 2fr 12rem 1fr; 
 
@@ -53,28 +65,27 @@ body,p,h1,h2,h3,h4{
 /* --SEARCH-- */
 .search_container{
     grid-area: 1 / 1 / 2 / 3;
+
     display: flex;
     align-items: center;
     margin-bottom: auto;
+    
     padding-top: 1rem;
 }
-.icon{
-    width: 29px;
-    height: 29px;
-}
-.icon_invert{
-    filter: invert(1);
+.search_container img:hover{
+    cursor: pointer;
 }
 .search_container input,
                   input:focus{
     font-family: var(--fontRegular);
     font-size: 1em;
     outline: none;
-    padding: 0 1rem;
+
     width: 100%;
     height: 2rem;
     border-radius: 1rem;
     border: 0;
+    padding: 0 1rem;
     margin-left: 1rem;
     background-color: rgb(230, 241, 245);
 }
@@ -87,6 +98,7 @@ body,p,h1,h2,h3,h4{
     margin-bottom: auto;
     gap: 2rem;
 }
+
 .profile_container p{ 
     font-family: var(--fontBold);
     font-size: 1.5em;
@@ -132,12 +144,19 @@ body,p,h1,h2,h3,h4{
     border: 0;
     background-color: var(--mainColor);
 }
+
+.profile_buttons button:hover{
+    cursor: pointer;
+    background-color: white;
+    border: 2px solid var(--mainColor);
+    color: var(--mainColor);
+}
 /* /// */
 /* SIDEBAR */
 .sidebar{
     display: grid;
     grid-template: 5rem 20rem 10rem / 100%;
-    padding: 1rem;
+    padding: 1rem 0;
     gap: 3rem;
     background-color: var(--mainColor);
     grid-area: 1 / 1 / 3 / 2;
@@ -149,6 +168,7 @@ body,p,h1,h2,h3,h4{
     display: flex;
     align-items: center;
     gap: 1rem;
+    padding-left: 1rem;
 }
 .dashboard img{
     width: 64px;
@@ -170,7 +190,11 @@ body,p,h1,h2,h3,h4{
     display: flex;
     align-items: center;
     gap: 2rem;
-    margin-left: 1rem;
+    padding-left: 2rem;
+}
+.nav_option:hover{
+    cursor: pointer;
+    background-color: rgb(114, 184, 184);
 }
 /* /// */
 /* MAIN */
@@ -193,7 +217,7 @@ body,p,h1,h2,h3,h4{
 }
 .card{
     border-radius: 0.5rem;
-    border-left: 0.5rem solid green;
+    border-left: 0.5rem solid var(--mainColor);
     display: grid;
     gap: 0.5rem;
     padding: 1.5rem 1.5rem;
@@ -203,12 +227,14 @@ body,p,h1,h2,h3,h4{
     background-color: white;
 }
 .card h3{
+    cursor: pointer;
     font-family: var(--fontBold);
 }
 .card p{
     font-family: var(--fontRegular);
 }
 .card img{
+    cursor: pointer;
     width: 24px;
     height: 24px;
 }
@@ -238,6 +264,7 @@ body,p,h1,h2,h3,h4{
     flex-direction: column;
 }
 .annouc_content h1{
+    cursor: pointer;
     font-family: var(--fontBold);
     font-size: 1em;
     margin: 0.2rem 0;
@@ -255,6 +282,11 @@ body,p,h1,h2,h3,h4{
 .trending{
     display: flex;
     flex-direction: column;
+}
+.trending img,
+.trending p,
+.trending h4{
+    cursor: pointer;
 }
 .trending_card{
     margin-top: 0.5rem;
@@ -276,3 +308,4 @@ body,p,h1,h2,h3,h4{
     display: flex;
     flex-direction: column;
 }
+
